# ChangeLog for games-rpg/magus
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*magus-1.3.1 (28 Dec 2014)

  02 Jan 2015; Martin Väth <martin@mvath.de>:
  Update postgresql dependency

  28 Dec 2014; Martin Väth <martin@mvath.de>:
  Downgrade to now only public version from sourceforge.
  Rename configure.in -> configure.ac for compatibility with current automake.

*magus-1.3.3 (28 May 2011)

  21 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  02 Aug 2012; Martin Väth <martin@mvath.de>:
  Parallelize patching and eautoreconf calls

  01 Jul 2012; Martin Väth <martin@mvath.de>:
  Use prune_libtool_files --all

  10 Jun 2012; Martin Väth <martin@mvath.de>:
  Remove support for icecat. Fix postgresql dependency

  06 Jun 2012; Martin Väth <martin@mvath.de>:
  Use new eutils features prune_libtool_files, doicon

  28 May 2012; Martin Väth <martin@mvath.de>:
  Cleaner dependencies and messages for colliding USE-flags.
  Rely on automagic eautopoint. Add support for optional imagemagick.

  17 May 2012; Martin Väth <martin@mvath.de>:
  Remove REQUIRED_USE; default to firefox

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  16 Apr 2012; Martin Väth <martin@mvath.de>:
  Use eautopoint and relax gettext runtime dependency

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base

  13 Mar 2012; Martin Väth <martin@mvath.de>:
  Fix dependency on dev-cpp/gtkmm: slot 3 is not (yet?) supported upstream.
  Introduce pngcrush useflag.

  30 Sep 2011; Martin Väth <martin@mvath.de>:
  Fix dependencies, in particular do not require optional media-gfx/pngcrush

  29 May 2011; Martin Väth <martin@mvath.de>:
  Add REQUIRED_USE and fix some missing dependencies.

  28 May 2011; Martin Väth <martin@mvath.de>:
  Version bump and patch for missing autopoint support.
  Remove old ebuild.

*magus-1.3.1 (10 Mar 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>:
  Bump to EAPI=4.
