@@ -4,6 +4,9 @@
 
 *magus-1.3.1 (28 Dec 2014)
 
+  06 Aug 2015; Martin Väth <martin@mvath.de>:
+  Remove multiprocessing to avoid strange build errors
+
   02 Jan 2015; Martin Väth <martin@mvath.de>:
   Update postgresql dependency
 
